--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "bootstrap-loader": "^1.0.10",
+    "es6-promise": "^3.2.1",
     "file-saver": "^1.3.2",
     "interact.js": "^1.2.6",
     "isomorphic-fetch": "^2.2.0",
