--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
     "react-select": "^1.0.0-beta13",
+    "recharts": "^0.15.1",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "redux-undo": "^0.6.1"
